bynkc/tests/fixtures/positive/221_async_send_waituntil/src/notify.bynk
context notify

consumes bynk { Logger }

service api from http {
  -- `~>` fires the log without awaiting it: on Workers it is handed to
  -- `ctx.waitUntil`, so it settles after the response returns.
  on GET("/") by Visitor () -> Effect[HttpResult[String]] given Logger {
    ~> Logger.info("served root")
    Ok("ok")
  }
}
