bynkc/tests/fixtures/negative/99_http_reserved_prefix/src/svc.bynk
context svc

service api from http {
  on GET("/_bynk/foo") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("nope")
  }
}
